Actualizacion de contenido de productos y subida de imagenes

--- a/bookings.html
+++ b/bookings.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./css/components/slide.css">
     <link rel="stylesheet" href="./css/components/heros.css">
     <link rel="stylesheet" href="./css/components/integrations.css">
+    <link rel="stylesheet" href="./css/components/footer.css">
     
     <title>Thinkion - Revolucionate</title>
 </head>
@@ -76,12 +77,7 @@
 
     <nav>
         <div id="logo" class="bg-think">
-            <div>
-                <a href="index.html"><img src="./imagenes/logo.png"></a>
-            </div>
-            <div>
-                <img src="./imagenes/row-think.png" class="arrow-logo">
-            </div>
+            <a href="index.html"><img src="./logo Thinkion.svg"></a>
         </div>
         <ul id="menu">
 
@@ -156,7 +152,7 @@
                                         <div>
                                             <img src="./imagenes/icon-chat.png">
                                         </div>
-                                        <span><a href="" class="sub-links">Reservas</a></span>   
+                                        <span><a href="bookings.html" class="sub-links">Reservas</a></span>   
                                     </li>
                                 </ul>
                             </article>
@@ -171,7 +167,7 @@
             <li><a class="links" href="prices.html">PRECIOS</a></li>
             <li><a class="links" href="us.html">NOSOTROS</a></li>
             <li><a class="links" href="customers.html">CLIENTES</a></li>
-            <li><a class="links" id="contact">CONTACTO</a></li>
+            <li><a class="links contact">CONTACTO</a></li>
         </ul>
         <div id="bx-btn">
             <img src="./imagenes/hamburger button.png" alt="">
