--- a/index.html
+++ b/index.html
@@ -76,12 +76,7 @@
 
     <nav>
         <div id="logo" class="bg-think">
-            <div>
-                <a href="index.html"><img src="./imagenes/logo.png"></a>
-            </div>
-            <div>
-                <img src="./imagenes/row-think.png" class="arrow-logo">
-            </div>
+            <a href="index.html"><img src="./logo Thinkion.svg"></a>
         </div>
         <ul id="menu">
 
@@ -171,7 +166,7 @@
             <li><a class="links" href="prices.html">PRECIOS</a></li>
             <li><a class="links" href="us.html">NOSOTROS</a></li>
             <li><a class="links" href="customers.html">CLIENTES</a></li>
-            <li><a class="links" id="contact">CONTACTO</a></li>
+            <li><a class="links contact">CONTACTO</a></li>
         </ul>
         <div id="bx-btn">
             <img src="./imagenes/hamburger button.png" alt="">
@@ -351,7 +346,7 @@
                 <article class="bx-30 center col">
 
                     <div class="bx-60">
-                        <h4 class="f-4 fc-think text-center think-bold">CENTRALIZACION REAL DE LA INFO</h4>
+                        <h4 class="f-4 fc-think text-center think-bold">SOPORTE TÉCNIOCO DE CALIDAD</h4>
                     </div>
                     <div class="bx-60">
                         <img src="./imagenes/svg_icons/03.svg" class="img-razons">
@@ -401,7 +396,7 @@
                 <article class="bx-30 center col">
 
                     <div class="bx-60">
-                        <h4 class="f-4 fc-think text-center think-bold">CENTRALIZACION REAL DE LA INFO</h4>
+                        <h4 class="f-4 fc-think text-center think-bold">GESTIÓN , PRODUCCIÓN Y ADMINITRACIÓN</h4>
                     </div>
                     <div class="bx-60">
                         <img src="./imagenes/svg_icons/04.svg" class="img-razons">
@@ -442,7 +437,7 @@
                 <article class="bx-30 center col">
 
                     <div class="bx-60">
-                        <h4 class="f-4 fc-think text-center think-bold">CENTRALIZACION REAL DE LA INFO</h4>
+                        <h4 class="f-4 fc-think text-center think-bold">DASHBOARDS Y REPORTES</h4>
                     </div>
                     <div class="bx-60">
                         <img src="./imagenes/svg_icons/05.svg" class="img-razons">
@@ -471,12 +466,13 @@
                     <h6 class="f-5 fc-think think-light">Beneficios de la centralizacion real</h6>
 
                     <ul class="pb-5">
-                        <li> <div class="list"></div>Maestros Unicos</li>
-                        <li> <div class="list"></div>Sincronizacion automatica</li>
-                        <li> <div class="list"></div>Datos sin duplicacion</li>
-                        <li> <div class="list"></div>Administracion centralizada</li>
-                        <li> <div class="list"></div>Sistema de pedidos desde el local</li>
-                        <li> <div class="list"></div>Aplicacion de Blockchain para produccion</li>
+                        <li> <div class="list"></div>Dashboard Ilimitados</li>
+                        <li> <div class="list"></div>Mas de 800 Métricas de Reportes</li>
+                        <li> <div class="list"></div>Módulo de Auditoría Inteligente</li>
+                        <li> <div class="list"></div>Reportes de Hoja de Cálculos</li>
+                        <li> <div class="list"></div>Información en Real Time</li>
+                        <li> <div class="list"></div>Carga de Reportes en Segundos</li>
+                        <li> <div class="list"></div>Filtros Inteligentes</li>
                     </ul>
 
                 </article>
@@ -1135,165 +1131,6 @@
 
         </section> -->
 
-        <style>
-
-            footer 
-            {
-                display:flex;
-                justify-content: center;
-                width:100%;
-                height:451px;
-                padding:100px 0px;
-            }
-
-            .container-footer
-            {
-                width:90%;
-                display:flex;
-                justify-content: center;
-            }
-
-            .footer-btn 
-            {
-                width:256px;
-                height:60px;
-                font-size:18px;
-                color:#FFFFFF;
-                border:none;
-                font-family: 'think-bold';
-                cursor:pointer;
-                transition:.4s;
-            }
-
-            .footer-btn:hover 
-            {
-                background-color:#D5F901;
-                color:#000000;
-            }
-
-            .links-footer
-            {
-                display:flex;
-                flex-direction: column;
-                list-style:none;
-                align-items: center;
-                line-height:33px;
-            }
-
-            .links-footer > li > a 
-            {
-                color:#FFFFFF;
-                font-family: 'think-bold';
-                text-decoration: none;
-                transition:.2s;
-            }
-
-            .links-footer > li > a:hover 
-            { 
-                color:#7A42EB;
-                text-decoration: underline;
-            }
-
-            .list-msg-footer { list-style: none; }
-
-            .list-msg-footer > li > a 
-            {
-                color:#FFFFFF;
-                font-family: 'think-bold';
-                text-decoration: none;
-                transition:.2s;
-                line-height: 30px;
-                font-size: 16px;
-            }
-
-            .list-msg-footer > li > a:hover 
-            {
-                color:#7A42EB;
-                text-decoration: underline;
-            } 
-
-            .legal-footer 
-            {
-                margin-top:60px;
-                display: flex;
-                justify-content: space-between;
-            }
-
-            .legal-footer > article:last-child 
-            {
-                display:flex;
-                align-items: center;
-                justify-content: flex-end;
-            }
-
-            #goToFooter 
-            {
-                position: absolute;
-                right:-50px;
-                cursor: pointer;
-            }
-
-            @media screen and ( max-width:1300px ) 
-            {
-                .container-footer > article:nth-child(1) { width:100%; }
-                .container-footer > article:nth-child(2) { width:50%;  }
-                .container-footer > article:nth-child(3) { width:25%; }
-                .container-footer > article:nth-child(4) { width:25%;  }
-            }
-
-            @media screen and ( max-width:1300px ) 
-            {
-                footer { height:auto; }
-                .container-footer > article:nth-child(2) { width:100%;  }
-                .container-footer > article:nth-child(3) { width:50%; }
-                .container-footer > article:nth-child(4) { width:50%;  }
-
-                .legal-footer 
-                {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    width:100%;
-                }
-
-                .legal-footer > article { width:90%; text-align: center; }
-
-                .legal-footer > article > span { line-height: 30px; }
-
-                .legal-footer > article:last-child { justify-content: center; }
-
-                #goToFooter { right:50px; }
-            }
-
-            @media screen and ( max-width:800px ) 
-            {
-                .legal-footer > article:last-child { width:100%; }
-            }
-
-
-            @media screen and ( max-width:450px ) 
-            {
-                .container-footer > article:nth-child(2) > section 
-                { 
-                    display:flex; 
-                    align-items: center; 
-                    flex-direction: column;  
-                }
-
-                #goToFooter { right:0px; }
-
-                .container-footer > article:nth-child(2) > article { text-align: center; line-height: 18px;}
-                .container-footer > article:nth-child(2) > section > ul { width:70%;}
-
-                .container-footer > article:nth-child(3) { width:100%; }
-                .container-footer > article:nth-child(4) { width:100%;  }
-
-                .links-footer
-                { display:block; margin:auto; }
-            }
-
-        </style>
-
         <footer class="bg-think-dark">
 
             <section class="container-footer wrap">
@@ -1391,7 +1228,7 @@
                         <li><a href="./prices.html">PRECIOS</a></li>
                         <li><a href="./us.html">NOSOTROS</a></li>
                         <li><a href="./customers.html">CLIENTES</a></li>
-                        <li><a id="contact">CONTACTO</a></li>
+                        <li><a class="contact">CONTACTO</a></li>
                     </ul>
 
                 </article>
