--- a/ecommerce.html
+++ b/ecommerce.html
@@ -210,7 +210,7 @@
                     <article class="bx-50 bx-content-title p-5">
                         <div class="bx-f bx-title-hero">
                             <h4 class="f-1 fc-w1 think-bold line-ht1">
-                                MÁS QUE UN ECOMMERCE.
+                                Más que un Ecommerce
                             </h4>
                         </div>
                     </article>
@@ -228,8 +228,8 @@
                     <article class="bx-50 bx-content-txt p-5">
 
                         <div class="bx-90 bx-txt-hero">
-                            <p class="fc-w1 f-5 pb-2 line-ht2">
-                                Thinkion ofrece su plataforma ecommerce desarrollada sobre PWA (Progresive Web App). Es una App, pero para Web. Con funcionamiento Offline durante la instancia de compra.
+                            <p class="fc-w1 f-5 pb-2 line-ht3">
+                                Thinkion ofrece su plataforma ecommerce desarrollada sobre <strong class="think-bold"> PWA (Progresive Web App) </strong>. Es una App, pero para Web. Con <strong class="think-bold"> funcionamiento Offline durante la instancia de compra. </strong>
                             </p>
                         </div>
 
@@ -252,7 +252,7 @@
 
             <div class="mockup-think bg-think">
                 <div class="inner-mockup">
-                    <img class="mockup-image" src="https://i.pinimg.com/736x/f0/7f/20/f07f201159e983effa46446c76e80712.jpg">
+                    <img class="mockup-image" src="./imagenes/ecommerce/address.jpg">
                 </div>
             </div>
 
@@ -289,8 +289,8 @@
                     <article class="bx-50 bx-content-txt p-5">
 
                         <div class="bx-90 bx-txt-hero">
-                            <p class="fc-w1 f-5 line-ht2 pb-2">
-                                Toda la administración puede realizarse desde un celular o cualquier dispositivo. Además, te permite seleccionar los productos ya cargados para la App de Ventas y disponibilizarlos en el ecommerce con su propia lista de precios, nombre, foto y más!
+                            <p class="fc-w1 f-5 line-ht3 pb-2">
+                                <strong class="think-bold"> Toda la administración puede realizarse desde un celular o cualquier dispositivo </strong>. Además, te permite seleccionar los productos ya cargados para la App de Ventas y disponibilizarlos en el ecommerce con su propia lista de precios, nombre, foto y más!
                             </p>
                         </div>
 
@@ -309,7 +309,7 @@
 
             <div class="mockup-blue bg-think-blue">
                 <div class="inner-mockup">
-                    <img class="mockup-image" src="https://i.pinimg.com/736x/f0/7f/20/f07f201159e983effa46446c76e80712.jpg">
+                    <img class="mockup-image" src="./imagenes/ecommerce/admin.jpg">
                 </div>
             </div>
 
@@ -351,7 +351,7 @@
 
                 <article class="bx-50 center">
 
-                    <img src="./imagenes/Benefits.png" class="img-integrations">
+                    <img src="./imagenes/ecommerce/iphone.png" class="img-lg">
 
                     <!-- <img src="./imagenes/integrations/01.png" class="integrations">
                     <img src="./imagenes/integrations/02.png" class="integrations">
