Arreglo de distancias entre boxes

--- a/customers.html
+++ b/customers.html
@@ -184,16 +184,18 @@
                     <h1 class="f-5 pb-2 think-bold">TEXTO H1 CORTO</h1>
                     <h1 class="f-1 pb-2 line-ht1 think-bold">Sistema integral para gastronómicos</h1>
                     <h5 class="f-5 pb-4 line-ht3 think-bold">Nuestro sistema permite analizar, operar y resolver toda tu operación desde cualquier lugar!</h5>
-                    <button class="btn f-5 think-bold bg-think-yellow py-4">
-                        Trabajemos juntos
-                    </button>
+                    <a href="#">
+                        <button class="btn-yellow">
+                            Trabajemos juntos
+                        </button>
+                    </a>
                 </article>
 
             </section>
 
         </section>
 
-        <section id="customers" class="gral-padding center col">
+        <section id="customers" class="center col">
 
             <header class="bx-50 center col">
                 <h5 class="text-center f-5 pb-2 think-bold">ELIJEN THINK ERP</h5>
@@ -254,7 +256,7 @@
                 <h2 class="f-1 pb-5 think-bold text-center">Trabajemos juntos</h2>
                 <article class="section-btn bx-f center">
                     <a href="#" class="bx-f center">
-                        <button class="btn bg-think-dark fc-w1 think-bold">
+                        <button class="btn bg-think-dark fc-w1 think-bold hover-lila">
                             Contactanos
                         </button>
                     </a>
