--- a/ecommerce.html
+++ b/ecommerce.html
@@ -548,6 +548,7 @@
 
         <section id="together" class="center bg-think-yellow ps-r">
 
+
             <h1 class="revol-banner think-black"> REVO </h1>
             <h1 class="revol-banner think-black"> LUCIO </h1>
             <h1 class="revol-banner think-black"> NATE </h1>
@@ -557,7 +558,7 @@
                 <h2 class="f-1 pb-5 think-bold text-center">Trabajemos juntos</h2>
                 <article class="section-btn bx-f center">
                     <a href="#" class="bx-f center">
-                        <button class="btn bg-think-dark fc-w1 think-bold">
+                        <button class="btn bg-think-dark fc-w1 think-bold hover-lila">
                             Contactanos
                         </button>
                     </a>
