--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 
         </section>
 
-        <section id="customers" class="gral-padding center col">
+        <section id="customers" class="center col">
 
             <header class="bx-50 center col">
                 <h5 class="text-center f-5 pb-2 think-bold">ELIJEN THINK ERP</h5>
@@ -553,7 +553,7 @@
 
             <article class="section-btn bx-f center mt-5">
                 <a href="customers.html" class="bx-f center">
-                    <button class="btn bg-think fc-w1 think-bold">
+                    <button class="btn bg-think fc-w1 think-bold hover-think-yellow">
                         Ver todos los clientes
                     </button>
                 </a>
@@ -620,7 +620,7 @@
 
         </section>
 
-        <section id="complementary" class="gral-padding center col">
+        <section id="complementary" class="center col">
 
             <header class="bx-80 center col">
                 <h5 class="text-center f-5 pb-2 think-bold">OTROS PRODUCTOS</h5>
@@ -788,7 +788,7 @@
                 <h2 class="f-1 pb-5 think-bold text-center">Trabajemos juntos</h2>
                 <article class="section-btn bx-f center">
                     <a href="#" class="bx-f center">
-                        <button class="btn bg-think-dark fc-w1 think-bold">
+                        <button class="btn bg-think-dark fc-w1 think-bold hover-lila">
                             Contactanos
                         </button>
                     </a>
