--- a/integrations.html
+++ b/integrations.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./css/components/contact.css">
     <link rel="stylesheet" href="./css/components/integrations.css">
     <link rel="stylesheet" href="./css/components/heros.css">
+    <link rel="stylesheet" href="./css/components/footer.css">
     <title>Thinkion - Revolucionate</title>
 </head>
 <body>
@@ -190,8 +191,8 @@
                         </p>
                     </article>
                     
-                    <a href="">
-                        <button class="btn bg-think think-bold fc-w1">
+                    <a href="#">
+                        <button class="btn-yellow">
                             Trabajemos juntos
                         </button>
                     </a>
@@ -617,7 +618,7 @@
                 <h2 class="f-1 pb-5 think-bold text-center">Trabajemos juntos</h2>
                 <article class="section-btn bx-f center">
                     <a href="#" class="bx-f center">
-                        <button class="btn bg-think-dark fc-w1 think-bold">
+                        <button class="btn bg-think-dark fc-w1 think-bold hover-lila">
                             Contactanos
                         </button>
                     </a>
