--- a/reports.html
+++ b/reports.html
@@ -188,9 +188,11 @@
                     <h1 class="f-5 pb-2 think-bold">REPORTES CENTRALES.</h1>
                     <h1 class="f-1 pb-2 line-ht1 think-bold"> El módulo de reportes más potente del Mercado.</h1>
                     <h5 class="f-5 pb-4 line-ht3 think-bold">Armá tus tableros de control con más de 500 posibles métricas y gestioná con todo nuestro set de reportes desde cualquier lugar.</h5>
-                    <button class="btn f-5 think-bold bg-think-yellow py-4">
-                        Trabajemos juntos
-                    </button>
+                    <a href="#">
+                        <button class="btn-yellow">
+                            Trabajemos juntos
+                        </button>
+                    </a>
                 </article>
 
             </section>
@@ -506,7 +508,7 @@
                 <h2 class="f-1 pb-5 think-bold text-center">Trabajemos juntos</h2>
                 <article class="section-btn bx-f center">
                     <a href="#" class="bx-f center">
-                        <button class="btn bg-think-dark fc-w1 think-bold">
+                        <button class="btn bg-think-dark fc-w1 think-bold hover-lila">
                             Contactanos
                         </button>
                     </a>
