--- a/us.html
+++ b/us.html
@@ -186,9 +186,11 @@
                     <h1 class="f-5 pb-2 think-bold">CONOCÉ MÁS SOBRE NOSOTROS</h1>
                     <h1 class="f-1 pb-2 line-ht1 think-bold">Llegamos para revolucionar la gastronomía</h1>
                     <h5 class="f-5 pb-4 line-ht3 think-bold">Creamos sistemas sustentables basados en la mejora contínua y nuevas tecnologías, enfocados en la funcionalidad y el cliente.</h5>
-                    <button class="btn f-5 think-bold bg-think-yellow py-4">
-                        Trabajemos juntos
-                    </button>
+                    <a href="#">
+                        <button class="btn-yellow">
+                            Trabajemos juntos
+                        </button>
+                    </a>
                 </article>
 
             </section>
@@ -301,7 +303,7 @@
 
         </section>
 
-        <section id="cite" class="py-5 center">
+        <section id="cite" class="center">
             
             <section class="bx-90 center bg-think-blue pos-r">
  
@@ -313,7 +315,7 @@
             </section>
         </section>
 
-        <section id="customers" class="py-5 center col">
+        <section id="customers" class="center col">
 
             <header class="bx-50 center col">
                 <h5 class="text-center f-5 pb-2 think-bold">ELIJEN THINK ERP</h5>
@@ -358,7 +360,7 @@
 
             <article class="section-btn bx-f center mt-5">
                 <a href="customers.html" class="bx-f center">
-                    <button class="btn bg-think fc-w1 think-bold">
+                    <button class="btn bg-think fc-w1 think-bold hover-think-yellow">
                         Ver todos los clientes
                     </button>
                 </a>
@@ -366,7 +368,7 @@
 
         </section>
 
-        <section id="complementary" class="py-5 center col">
+        <section id="complementary" class="center col">
 
             <header class="bx-80 center col">
                 <h5 class="text-center f-5 pb-2 think-bold">OTROS PRODUCTOS</h5>
@@ -522,7 +524,7 @@
                 <h2 class="f-1 pb-5 think-bold text-center">Trabajemos juntos</h2>
                 <article class="section-btn bx-f center">
                     <a href="#" class="bx-f center">
-                        <button class="btn bg-think-dark fc-w1 think-bold">
+                        <button class="btn bg-think-dark fc-w1 think-bold hover-lila">
                             Contactanos
                         </button>
                     </a>
@@ -687,7 +689,6 @@
 
     <script src="./js/complementaryProducts.js"></script>
     <script src="js/contact.js"></script>
-    <script src="js/review-slide.js"></script>
     <script src="js/toggle-menu.js"></script>
 </body>
 </html>
