--- a/admin.html
+++ b/admin.html
@@ -187,9 +187,11 @@
                     <h1 class="f-1 pb-2 line-ht1 think-bold">La gestión organizada, es posible con Thinkion.</h1>
                     <h5 class="f-5 pb-4 line-ht3 think-bold">Contamos con módulos diseñados y pensados para mejorar tu gestión, incorporando procesos y mejorando actuales. </h5>
                     
-                    <button class="btn f-5 think-bold bg-think-yellow py-4">
-                        Trabajemos juntos
-                    </button>
+                    <a href="#">
+                        <button class="btn-yellow">
+                            Trabajemos juntos
+                        </button>
+                    </a>
                     
                 </article>
 
@@ -470,7 +472,7 @@
                 <h2 class="f-1 pb-5 think-bold text-center">Trabajemos juntos</h2>
                 <article class="section-btn bx-f center">
                     <a href="#" class="bx-f center">
-                        <button class="btn bg-think-dark fc-w1 think-bold">
+                        <button class="btn bg-think-dark fc-w1 think-bold hover-lila">
                             Contactanos
                         </button>
                     </a>
