--- a/products.html
+++ b/products.html
@@ -188,9 +188,11 @@
                     <h1 class="f-5 pb-2 think-bold">TEXTO H1 CORTO</h1>
                     <h1 class="f-1 pb-2 line-ht1 think-bold">Sistema integral para gastronómicos</h1>
                     <h5 class="f-5 pb-4 line-ht3 think-bold">Nuestro sistema permite analizar, operar y resolver toda tu operación desde cualquier lugar!</h5>
-                    <button class="btn f-5 think-bold bg-think-yellow py-4">
-                        Trabajemos juntos
-                    </button>
+                    <a href="#">
+                        <button class="btn-yellow">
+                            Trabajemos juntos
+                        </button>
+                    </a>
                 </article>
 
             </section>
@@ -233,7 +235,7 @@
                         </div>
 
                         <a href="">
-                            <button class="btn-hero ml-1 fc-think think-bold">
+                            <button class="btn-hero ml-1 fc-think think-bold hover-hero-dark">
                                 Ver más
                             </button>
                         </a>
@@ -294,7 +296,7 @@
                         </div>
 
                         <a href="">
-                            <button class="btn-hero ml-1 fc-think-blue think-bold">
+                            <button class="btn-hero ml-1 fc-think-blue think-bold hover-hero-dark">
                                 Ver más
                             </button>
                         </a>
@@ -349,7 +351,7 @@
                         </div>
 
                         <a href="">
-                            <button class="btn-hero ml-1 think-bold">
+                            <button class="btn-hero ml-1 think-bold hover-hero-green">
                                 Ver más
                             </button>
                         </a>
@@ -410,7 +412,7 @@
                         </div>
 
                         <a href="">
-                            <button class="btn-hero ml-1 fc-think-blue think-bold">
+                            <button class="btn-hero ml-1 fc-think-blue think-bold hover-lila">
                                 Ver más
                             </button>
                         </a>
@@ -465,7 +467,7 @@
                         </div>
 
                         <a href="">
-                            <button class="btn-hero ml-1 think-bold fc-think">
+                            <button class="btn-hero ml-1 think-bold fc-think hover-hero-green">
                                 Ver más
                             </button>
                         </a>
@@ -653,7 +655,7 @@
 
         </section>
 
-        <section id="customers" class="gral-padding center col">
+        <section id="customers" class="center col">
 
             <header class="bx-50 center col">
                 <h5 class="text-center f-5 pb-2 think-bold">ELIJEN THINK ERP</h5>
@@ -698,7 +700,7 @@
 
             <article class="section-btn bx-f center mt-5">
                 <a href="customers.html" class="bx-f center">
-                    <button class="btn bg-think fc-w1 think-bold">
+                    <button class="btn bg-think fc-w1 think-bold hover-think">
                         Ver todos los clientes
                     </button>
                 </a>
@@ -706,7 +708,7 @@
 
         </section>
 
-        <section id="cite" class="center pb-5">
+        <section id="cite" class="center">
             
             <section class="bx-90 center bg-think-blue pos-r">
  
@@ -718,7 +720,7 @@
             </section>
         </section>
 
-        <section id="complements" class="gral-padding center col">
+        <section id="complements" class="center col">
 
             <header class="bx-80 center col">
                 <h5 class="text-center f-5 pb-2 think-bold">OTROS PRODUCTOS</h5>
@@ -770,7 +772,7 @@
 
             <article class="section-btn bx-f center">
                 <a href="#" class="bx-f center">
-                    <button class="btn bg-think fc-w1 think-bold">
+                    <button class="btn bg-think fc-w1 think-bold hover-think">
                         Ver todos
                     </button>
                 </a>
@@ -781,7 +783,7 @@
 
         <section id="together" class="center bg-think-yellow ps-r">
 
-            
+
             <h1 class="revol-banner think-black"> REVO </h1>
             <h1 class="revol-banner think-black"> LUCIO </h1>
             <h1 class="revol-banner think-black"> NATE </h1>
@@ -789,9 +791,13 @@
             <article class="py-5 bx-50 center col">
                 <h5 class="f-5 pb-2 think-bold">CONTACTO</h5>
                 <h2 class="f-1 pb-5 think-bold text-center">Trabajemos juntos</h2>
-                <button class="btn py-4 fw f-5 think-bold" style="background-color:#000;color:white;">
-                    Contactanos
-                </button>
+                <article class="section-btn bx-f center">
+                    <a href="#" class="bx-f center">
+                        <button class="btn bg-think-dark fc-w1 think-bold hover-lila">
+                            Contactanos
+                        </button>
+                    </a>
+                </article>
             </article>
 
         </section>
