--- a/app-shells.html
+++ b/app-shells.html
@@ -180,7 +180,7 @@
             
             <div id="gradient"></div>
 
-            <img src="./imagenes/app-shell/hero.jpg" class="img-slide">
+            <img src="./imagenes/app-shell/hero.jpg" class="img-slide-app-shell">
 
             <section class="bx-90 fc-w1 p-5">
 
