update and edit components

--- a/app-shells.html
+++ b/app-shells.html
@@ -681,8 +681,9 @@
 
     
 
-    <script src="js/contact.js"></script>
-    <script src="js/review-slide.js"></script>
-    <script src="js/toggle-menu.js"></script>
+    <script src="js/footer-displace.js" defer></script>
+    <script src="js/contact.js" defer></script>
+    <script src="js/review-slide.js" defer></script>
+    <script src="js/toggle-menu.js" defer></script>
 </body>
 </html>
