--- a/integrations.html
+++ b/integrations.html
@@ -781,7 +781,8 @@
     
     </section>
 
-    <script src="js/contact.js"></script>
-    <script src="js/toggle-menu.js"></script>
+    <script src="js/footer-displace.js" defer></script>
+    <script src="js/contact.js" defer></script>
+    <script src="js/toggle-menu.js" defer></script>
     </body>
 </html>
