--- a/products.html
+++ b/products.html
@@ -956,11 +956,12 @@
 
     </section>
 
-    <script src="js/contact.js"></script>
-    <script src="js/review-slide.js"></script>
-    <script src="js/full-videos.js"></script>
-    <script src="js/mockupsVideos.js"></script>
-    <script src="js/toggle-menu.js"></script>
-    <script src="js/choose-think.js"></script>
+    <script src="js/footer-displace.js" defer></script>
+    <script src="js/contact.js" defer></script>
+    <script src="js/review-slide.js" defer></script>
+    <script src="js/full-videos.js" defer></script>
+    <script src="js/mockupsVideos.js" defer></script>
+    <script src="js/toggle-menu.js" defer></script>
+    <script src="js/choose-think.js" defer></script>
 </body>
 </html>
