--- a/ecommerce.html
+++ b/ecommerce.html
@@ -721,7 +721,8 @@
 
     </section>
 
-    <script src="js/contact.js"></script>
-    <script src="js/toggle-menu.js"></script>
+    <script src="js/footer-displace.js" defer></script>
+    <script src="js/contact.js" defer></script>
+    <script src="js/toggle-menu.js" defer></script>
 </body>
 </html>
