--- a/us.html
+++ b/us.html
@@ -687,8 +687,9 @@
 
     </section>
 
-    <script src="./js/complementaryProducts.js"></script>
-    <script src="js/contact.js"></script>
-    <script src="js/toggle-menu.js"></script>
+    <script src="js/footer-displace.js" defer></script>
+    <script src="./js/complementaryProducts.js" defer></script>
+    <script src="js/contact.js" defer></script>
+    <script src="js/toggle-menu.js" defer></script>
 </body>
 </html>
