update component mockups-image

--- a/how-does-it-work.html
+++ b/how-does-it-work.html
@@ -235,7 +235,7 @@
 
                         <div class="bx-80">
                             <div class="bx-30 pb-3">
-                                <img src="./imagenes/icons/dark-icons/Clock.svg" class="img-md">
+                                <img src="./imagenes/icons/dark-icons/clock.svg" class="img-md">
                             </div>
                             <h5 class="f-5 pb-2 fc-think think-bold">BACKUP DIARIO</h5>
                             <p class="f-5 line-ht3">Si, tu información es crucial para nosotros. Por eso contamos con muchos métodos de control de los datos y backup diario.</p>
@@ -863,5 +863,6 @@
     <script src="js/footer-displace.js" defer></script>
     <script src="js/contact.js" defer></script>
     <script src="js/toggle-menu.js" defer></script>
+    <script src="js/complementaryProducts.js" defer></script>
 </body>
 </html>
