--- a/index.html
+++ b/index.html
@@ -612,10 +612,10 @@
 
             <section id="btns-complementary">
                 <button id="btn-com-prev" class="btn-slide-apps">
-                    <img src="./imagenes/arrow-left.png" alt="">
+                    <img src="./imagenes/icons/arrow-left.png" alt="">
                 </button>
                 <button id="btn-com-next" class="btn-slide-apps">
-                    <img src="./imagenes/arrow-right.png" alt="">
+                    <img src="./imagenes/icons/arrow-right.png" alt="">
                 </button>
             </section>
              
