--- a/admin.html
+++ b/admin.html
@@ -166,6 +166,7 @@
             <li><a class="links" href="products.html">PRODUCTOS</a></li>
             <li><a class="links" href="prices.html">PRECIOS</a></li>
             <li><a class="links" href="us.html">NOSOTROS</a></li>
+            <li class="d-n"><a class="links" href="us.html">BLOG</a></li>
             <li><a class="links" href="customers.html">CLIENTES</a></li>
             <li><a class="links contact">CONTACTO</a></li>
         </ul>
@@ -379,8 +380,8 @@
         <section id="mockups" class="gral-padding center col pos-r">
 
             <header class="bx-50 center col">
-                <h5 class="text-center f-5 pb-1 think-bold">Controlá y gestioná tu negocio desde cualquier lugar</h5>
                 <h2 class="text-center f-1 think-bold">GESTION Y ADMINISTRACION </h2>
+                <h5 class="text-center f-5 pb-1 think-bold">Controlá y gestioná tu negocio desde cualquier lugar</h5>
             </header>
 
             <section id="bx-mockup">
@@ -714,6 +715,7 @@
                         <li><a href="./products.html">PRODUCTOS</a></li>
                         <li><a href="./prices.html">PRECIOS</a></li>
                         <li><a href="./us.html">NOSOTROS</a></li>
+                        <li class="d-n"><a href="us.html">BLOG</a></li>
                         <li><a href="./customers.html">CLIENTES</a></li>
                         <li><a class="contact">CONTACTO</a></li>
                     </ul>
@@ -721,7 +723,7 @@
                 </article>
 
                 <article class="bx-20">
-
+                    
                     <article class="bx-f fc-w1 f-5">
                         <p class="text-center">TRABAJEMOS JUNTOS</p>
                     </article>
