--- a/customers.html
+++ b/customers.html
@@ -163,6 +163,7 @@
             <li><a class="links" href="products.html">PRODUCTOS</a></li>
             <li><a class="links" href="prices.html">PRECIOS</a></li>
             <li><a class="links" href="us.html">NOSOTROS</a></li>
+            <li class="d-n"><a class="links" href="us.html">BLOG</a></li>
             <li><a class="links" href="customers.html">CLIENTES</a></li>
             <li><a class="links contact">CONTACTO</a></li>
         </ul>
@@ -548,6 +549,7 @@
                         <li><a href="./products.html">PRODUCTOS</a></li>
                         <li><a href="./prices.html">PRECIOS</a></li>
                         <li><a href="./us.html">NOSOTROS</a></li>
+                        <li class="d-n"><a href="us.html">BLOG</a></li>
                         <li><a href="./customers.html">CLIENTES</a></li>
                         <li><a class="contact">CONTACTO</a></li>
                     </ul>
@@ -555,7 +557,7 @@
                 </article>
 
                 <article class="bx-20">
-
+                    
                     <article class="bx-f fc-w1 f-5">
                         <p class="text-center">TRABAJEMOS JUNTOS</p>
                     </article>
