--- a/digital-pack.html
+++ b/digital-pack.html
@@ -408,13 +408,13 @@
 
                 <article class="box-image-admin bx-50">
 
-                    <img class="img-lg" src="./imagenes/Benefits.png">
+                    <img class="img-lg" src="./imagenes/digital-pack/porque_ecommerce_thinkion.jpg">
 
                 </article>
 
                 <article class="bx-50 px-5 col">
                         
-                    <h2 class="f-1 think-bold pb-3 line-ht1">Por qué elegir Thinkion para tu Ecommerce.</h2>
+                    <h2 class="f-1 think-bold pb-3 line-ht1">Por qué elegir Thinkion para tu Carta Digital</h2>
 
                     <ul class="pb-3">
                         <li class="list-integration"> <div class="list"></div>PWA. Web App Online / Offline.</li>
@@ -702,6 +702,7 @@
                         <li><a href="./products.html">PRODUCTOS</a></li>
                         <li><a href="./prices.html">PRECIOS</a></li>
                         <li><a href="./us.html">NOSOTROS</a></li>
+                        <li class="d-n"><a href="us.html">BLOG</a></li>
                         <li><a href="./customers.html">CLIENTES</a></li>
                         <li><a class="contact">CONTACTO</a></li>
                     </ul>
@@ -723,7 +724,7 @@
                             Escribinos
                         </button>
                     </article>
-                    
+
                 </article>
 
                 <section class="legal-footer bx-f">
