--- a/integrations.html
+++ b/integrations.html
@@ -733,6 +733,7 @@
                         <li><a href="./products.html">PRODUCTOS</a></li>
                         <li><a href="./prices.html">PRECIOS</a></li>
                         <li><a href="./us.html">NOSOTROS</a></li>
+                        <li class="d-n"><a href="us.html">BLOG</a></li>
                         <li><a href="./customers.html">CLIENTES</a></li>
                         <li><a class="contact">CONTACTO</a></li>
                     </ul>
@@ -754,7 +755,7 @@
                             Escribinos
                         </button>
                     </article>
-                    
+
                 </article>
 
                 <section class="legal-footer bx-f">
