--- a/products.html
+++ b/products.html
@@ -177,6 +177,8 @@
     <section class="cont-full">
 
         <section id="slide" class="bg-image-products">
+
+            <div class="dark_screen"></div>
             
             <div id="gradient"></div>
 
@@ -185,9 +187,9 @@
             <section class="bx-90 fc-w1 p-5">
 
                 <article class="bx-45">
-                    <h1 class="f-5 pb-2 think-bold">TEXTO H1 CORTO</h1>
-                    <h1 class="f-1 pb-2 line-ht1 think-bold">Sistema integral para gastronómicos</h1>
-                    <h5 class="f-5 pb-4 line-ht3 think-bold">Nuestro sistema permite analizar, operar y resolver toda tu operación desde cualquier lugar!</h5>
+                    <h1 class="f-5 pb-2 think-bold">SUITE THINKION</h1>
+                    <h1 class="f-1 pb-2 line-ht1 think-bold">Conocé todos los productos que Thinkion tiene para ofrecerte.</h1>
+                    <h5 class="f-5 pb-4 line-ht3 think-bold">Además de nuestro ecommerce, sistema de reservas y pack digital con Thinkion podes mejorar la comunicación interna y hacia tus clientes. Generar beneficios y trabajar sobre la fidelización.</h5>
                     <a class="contact">
                         <button class="btn-yellow">
                             Trabajemos juntos
@@ -233,7 +235,7 @@
                             </p>
                         </div>
 
-                        <a href="./prices.html">
+                        <a href="./prices.html?product=think-food">
                             <button class="btn-hero ml-1 fc-think think-bold hover-hero-dark">
                                 Ver más
                             </button>
@@ -294,7 +296,7 @@
                             </p>
                         </div>
 
-                        <a href="./prices.html">
+                        <a href="./prices.html?product=think-check">
                             <button class="btn-hero ml-1 fc-think-blue think-bold hover-hero-dark">
                                 Ver más
                             </button>
@@ -409,7 +411,7 @@
                             </p>
                         </div>
 
-                        <a href="./prices.html">
+                        <a href="./prices.html?product=intranet">
                             <button class="btn-hero ml-1 think-bold hover-hero-green">
                                 Ver más
                             </button>
@@ -470,7 +472,7 @@
                             </p>
                         </div>
 
-                        <a href="./prices.html">
+                        <a href="./prices.html?product=think-card">
                             <button class="btn-hero ml-1 fc-think-blue think-bold hover-lila">
                                 Ver más
                             </button>
@@ -662,6 +664,7 @@
                         <li><a href="./products.html">PRODUCTOS</a></li>
                         <li><a href="./prices.html">PRECIOS</a></li>
                         <li><a href="./us.html">NOSOTROS</a></li>
+                        <li class="d-n"><a href="us.html">BLOG</a></li>
                         <li><a href="./customers.html">CLIENTES</a></li>
                         <li><a class="contact">CONTACTO</a></li>
                     </ul>
