--- a/us.html
+++ b/us.html
@@ -166,6 +166,7 @@
             <li><a class="links" href="products.html">PRODUCTOS</a></li>
             <li><a class="links" href="prices.html">PRECIOS</a></li>
             <li><a class="links" href="us.html">NOSOTROS</a></li>
+            <li class="d-n"><a class="links" href="us.html">BLOG</a></li>
             <li><a class="links" href="customers.html">CLIENTES</a></li>
             <li><a class="links contact">CONTACTO</a></li>
         </ul>
@@ -742,6 +743,7 @@
                         <li><a href="./products.html">PRODUCTOS</a></li>
                         <li><a href="./prices.html">PRECIOS</a></li>
                         <li><a href="./us.html">NOSOTROS</a></li>
+                        <li class="d-n"><a href="us.html">BLOG</a></li>
                         <li><a href="./customers.html">CLIENTES</a></li>
                         <li><a class="contact">CONTACTO</a></li>
                     </ul>
