--- a/bookings.html
+++ b/bookings.html
@@ -697,6 +697,7 @@
                         <li><a href="./products.html">PRODUCTOS</a></li>
                         <li><a href="./prices.html">PRECIOS</a></li>
                         <li><a href="./us.html">NOSOTROS</a></li>
+                        <li class="d-n"><a href="us.html">BLOG</a></li>
                         <li><a href="./customers.html">CLIENTES</a></li>
                         <li><a class="contact">CONTACTO</a></li>
                     </ul>
