--- a/ecommerce.html
+++ b/ecommerce.html
@@ -454,8 +454,8 @@
         <section id="mockups" class="gral-padding center col pos-r">
 
             <header class="bx-50 center col">
-                <h5 class="text-center f-5 pb-1 think-bold">Controlá y gestioná tu negocio desde cualquier lugar</h5>
-                <h2 class="text-center f-1 think-bold">GESTION Y ADMINISTRACION </h2>
+                <h2 class="text-center f-1 think-bold">CUSTOMIZA TU ECOMMERCE</h2>
+                <h5 class="text-center f-5 pb-1 think-bold">El primer ecommerce pensado para Gastronomía.</h5>
             </header>
 
             <section id="bx-mockup">
@@ -713,6 +713,7 @@
                         <li><a href="./products.html">PRODUCTOS</a></li>
                         <li><a href="./prices.html">PRECIOS</a></li>
                         <li><a href="./us.html">NOSOTROS</a></li>
+                        <li class="d-n"><a href="us.html">BLOG</a></li>
                         <li><a href="./customers.html">CLIENTES</a></li>
                         <li><a class="contact">CONTACTO</a></li>
                     </ul>
@@ -721,7 +722,6 @@
 
                 <article class="bx-20">
                     
-
                     <article class="bx-f fc-w1 f-5">
                         <p class="text-center">TRABAJEMOS JUNTOS</p>
                     </article>
@@ -736,7 +736,6 @@
                         </button>
                     </article>
 
-                    
                 </article>
 
                 <section class="legal-footer bx-f">
