--- a/how-does-it-work.html
+++ b/how-does-it-work.html
@@ -169,6 +169,7 @@
             <li><a class="links" href="products.html">PRODUCTOS</a></li>
             <li><a class="links" href="prices.html">PRECIOS</a></li>
             <li><a class="links" href="us.html">NOSOTROS</a></li>
+            <li class="d-n"><a class="links" href="us.html">BLOG</a></li>
             <li><a class="links" href="customers.html">CLIENTES</a></li>
             <li><a class="links contact">CONTACTO</a></li>
         </ul>
@@ -804,6 +805,7 @@
                         <li><a href="./products.html">PRODUCTOS</a></li>
                         <li><a href="./prices.html">PRECIOS</a></li>
                         <li><a href="./us.html">NOSOTROS</a></li>
+                        <li class="d-n"><a href="us.html">BLOG</a></li>
                         <li><a href="./customers.html">CLIENTES</a></li>
                         <li><a class="contact">CONTACTO</a></li>
                     </ul>
@@ -825,7 +827,7 @@
                             Escribinos
                         </button>
                     </article>
-                    
+
                 </article>
 
                 <section class="legal-footer bx-f">
