update images logos customers

--- a/customers.html
+++ b/customers.html
@@ -237,9 +237,6 @@
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/crisol.png">
                     </li>
-
-
-
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/bdh.png">
                     </li>
@@ -270,9 +267,6 @@
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/emilydaniels.png">
                     </li>
-
-
-
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/forestdan.png">
                     </li>
@@ -303,9 +297,6 @@
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/petitbouquet.png">
                     </li>
-
-
-
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/rebelion.png">
                     </li>
@@ -327,7 +318,6 @@
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/tacuara.png">
                     </li>
-
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/7030.png">
                     </li>
@@ -349,7 +339,6 @@
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/burgerbros.png">
                     </li>
-
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/burgerclub.png">
                     </li>
@@ -371,7 +360,6 @@
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/kenji.png">
                     </li>
-
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/krim.png">
                     </li>
@@ -393,7 +381,6 @@
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/mediapinta.png">
                     </li>
-
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/mercado55.png">
                     </li>
@@ -415,7 +402,6 @@
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/sacro.png">
                     </li>
-
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/taste&meet.png">
                     </li>
@@ -424,6 +410,163 @@
                     </li>
                     <li class="bx-20">
                         <img class="img-lg center-block" src="./imagenes/customers/tianas.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/7167burger.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/bellahortensia.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/bierhaus.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/birrachica.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/buenabirrasocial.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/burgerclub.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/cervario.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/cerveceriaquilmes.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/chabar.png">
+                    </li>
+
+
+
+
+
+
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/ferrara.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/fika.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/goodandgreen.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/harrys.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/haulani.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/ilovesushi.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/katzenhaus.png">
+                    </li>
+
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/keitan.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/lachicha.png">
+                    </li>
+
+
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/laesqdelsandwich.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/lafarolaexpress.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/lagaleramos.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/lagaleriacervecera.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/lagerhaus.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/lapanchayelcafe.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/lootcerveceria.png">
+                    </li>
+
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/luzmala.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/mercati.png">
+                    </li>
+
+
+
+
+
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/muraroa.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/mustang.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/nato.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/nuvola.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/onlybe.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/osaki.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/outletbar.png">
+                    </li>
+
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/parque.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/pulperianorte.png">
+                    </li>
+
+
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/pulperiaquilapan.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/rabia.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/salsarte.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/sensei.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/sushione.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/taffer.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/torito.png">
+                    </li>
+
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/trenquecraft.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/vurguesa.png">
+                    </li>
+                    <li class="bx-20">
+                        <img class="img-lg center-block" src="./imagenes/customers/wolfa.png">
                     </li>
                     
                 </ul>
