--- a/digital-pack.html
+++ b/digital-pack.html
@@ -446,7 +446,7 @@
 
             <header class="bx-50 center col">
                 <h5 class="text-center f-5 pb-1 think-bold">AGILIZÁ TU SERVICIO</h5>
-                <h2 class="text-center f-1 think-bold">Evita las largas colas con nuestra app integrada</h2>
+                <h2 class="text-center f-1 think-bold">Evita las largas colas.</h2>
             </header>
 
             <section id="bx-mockup">
